Fix: prevent bubbles from being cut off at edges

--- a/common/common.scss
+++ b/common/common.scss
@@ -53,6 +53,7 @@
   position: relative;
   min-height: 180px;
   margin: 0.5em 0;
+  overflow: hidden; /* 防止泡泡超出边界 */
 }
 
 /* 泡泡基础样式 */
